<resources>
    <string name="app_name">simsim</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="eplainText3">지금 당장 놀 수 있는 친구들</string>
    <string name="tagBtn">추가</string>
    <string name="noSimsimBtn">괜찮아요</string>
    <string name="simsimBtn">심심해요</string>
    <string name="tagEditText"></string>
    <string name="explainText1">지금 심심한가요?</string>
    <string name="explaintText2">뭐하고 놀까요?</string>
    <string name="homeText">홈</string>
    <string name="settingText">설정</string>
    <string name="matchBtn">매치</string>
    <string name="roomName">모바일 &amp; 유비쿼터스</string>
    <string name="title_activity_vacation">VacationActivity</string>
    <string name="vacationInfo">
        \n
        05:00 ~ 06:00 - 강릉 출발\n
        06:00 ~ 11:00 - 하야트 펜션 도착\n
        11:00 ~ 18:00 - 자유시간\n
        19:00 ~ 20:00 - 강릉 야시장 개장\n
        21:00 ~ 22:00 - 강릉시 불꽃놀이 축제\n
    </string>
</resources>