<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_home_scene"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/explainText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/eplainText3"
        app:layout_constraintStart_toStartOf="@+id/tagEditText"
        app:layout_constraintTop_toBottomOf="@+id/tagEditText" />

    <Button
        android:id="@+id/tagBtn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/radius"
        android:text="@string/tagBtn"
        app:layout_constraintEnd_toEndOf="@+id/noSimsimBtn"
        app:layout_constraintTop_toTopOf="@+id/tagEditText" />

    <Button
        android:id="@+id/noSimsimBtn"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/radius"
        android:text="@string/noSimsimBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/simsimBtn" />

    <Button
        android:id="@+id/simsimBtn"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/radius"
        android:text="@string/simsimBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explainText1" />

    <TextView
        android:id="@+id/explainText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/explainText1"
        app:layout_constraintStart_toStartOf="@+id/simsimBtn"
        app:layout_constraintTop_toBottomOf="@+id/homeText" />

    <TextView
        android:id="@+id/explainText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/explaintText2"
        app:layout_constraintStart_toStartOf="@+id/tagEditText"
        app:layout_constraintTop_toBottomOf="@+id/simsimBtn" />

    <TextView
        android:id="@+id/settingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/settingText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeText"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settingText" />

    <EditText
        android:id="@+id/tagEditText"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="@drawable/radius"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/tagEditText"
        app:layout_constraintEnd_toStartOf="@+id/tagBtn"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="@+id/simsimBtn"
        app:layout_constraintTop_toBottomOf="@+id/explainText2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="381dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ListView
        android:id="@+id/matchListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>